# fuckburl-rs

./: Cargo.toml
src/: main.rs
