[package]
name = "fuckburl"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true

[profile.release]
incremental = true
opt-level = 3
strip = "symbols"
lto = true
panic = "abort"

[dependencies]
text_io = "0.1"
lazy_static = "1.4"
regex = { version = "1.3", default-features = false, features = ["std"] }
tokio = { version = "1.19.2", default-features = false, features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.11"
futures = "0.3.21"
