[package]
name = "fuckburl"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true

[profile.release]
incremental = true
opt-level = 3
strip = "symbols"
lto = true
panic = "abort"

[dependencies]
regex = { version = "1", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
reqwest = "0.12"
futures = "0.3"
